# com.redhat.logging

./: .gitignore  Makefile.am  README.md  com.redhat.logging.spec  configure.ac  io.systemd.journal.spec  meson.build
src/: io.systemd.journal.varlink  main.c  meson.build
